Fix Drawer Height, Update Build
* sets position: relative; on the body so that height: 100%;
can be used. Before the drawer wasn't stretching across the
entire screen on smaller devices (ie when there was a scrollbar)

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,4 +17,7 @@ body {
 	font-size: 1.6rem;
 	font-weight: 400;
 	padding: 0;
+
+	// height: 100% will cover entire screen
+	position: relative;
 }
